--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: linear-gradient(135deg, #2b2a2a, #000033, #0000ff);
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+html {
+  scroll-behavior: smooth;
 }
