--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: linear-gradient(135deg, #2b2a2a, #000033, #0000ff);
   --foreground: #171717;
 }
 
